--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.304.0",
     "next": "13.5.6",
+    "next-cloudinary": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
