--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "lucide-react": "^0.304.0",
     "next": "13.5.6",
     "next-cloudinary": "^5.18.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.10.4",
+    "stripe": "^12.10.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
